# STM32F4Discovery-CMSIS

./: CMakeLists.txt  README.md
src/: main.c
